--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <title>Color Flipper</title>
   </head>
   <body>
+    <section class="navbar-container">
+      <nav class="navbar">
+        <ul>
+          <li><a href="index.html">Color Flipper</a></li>
+          <li><a href="index.html">Simple Hex</a></li>
+        </ul>
+      </nav>
+    </section>
     <main>
-      <section class="navbar-container">
-        <nav class="navbar">
-          <ul>
-            <li>Color Flipper</li>
-            <li>Simple Hex</li>
-          </ul>
-        </nav>
-      </section>
       <section class="center-container">
         <div class="title">
-          <h1>Background Color: Red</h1>
+          <h1>Background Color: <span class="color">#f1f5f8</span></h1>
         </div>
-        <button class="button">Click Me</button>
+        <button id="btn" class="button">Click Me</button>
       </section>
     </main>
 
     <!-- Javascript -->
-    <script src="script.js"></script>
+    <script src="hexs.js"></script>
   </body>
 </html>
